# stock-rag-bot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: routes.py  schemas.py
app/bot/: handlers.py  keyboards.py
app/ingestion/: chunker.py  ner.py  pipeline.py  table_parser.py
app/ingestion/scrapers/: base.py  semantic.py  ziraat_yatirim.py
app/llm/: client.py  prompts.py
app/rag/: chain.py
app/vectorstore/: client.py  embeddings.py  retriever.py
scheduler/: jobs.py
scripts/: preview_ingestion_metadata.py
